// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateVueMarkup() > should generate correct Vanilla JS markup for button 1`] = `
"<script setup lang="ts">
  import { ref } from 'vue';
  import { PBanner, PButton } from '@porsche-design-system/components-vue';

  const open = ref(undefined);

  const onClick = () => {
    open.value = true;
  }
  const onDismiss = () => {
    open.value = false;
  }
</script>

<template>
  <PButton aria="{'aria-haspopup':true,'aria-label':'Some more descriptive label'}" type="button" :compact="true" icon="add" @click="onClick">
    Open Banner
  </PButton>

  <PBanner :open="open" :dismissButton="false" heading="Some heading" headingTag="h4" state="warning" @dismiss="onDismiss" />
</template>"
`;

exports[`generateVueMarkup() > should generate correct Vanilla JS markup for flyout 1`] = `
"<script setup lang="ts">
  import { ref } from 'vue';
  import { PButton, PButtonGroup, PFlyout, PHeading, PText } from '@porsche-design-system/components-vue';

  const open = ref(undefined);

  const onClick = () => {
    open.value = true;
  }
  const onDismiss = () => {
    open.value = false;
  }
</script>

<template>
  <PButton type="button" aria="{'aria-haspopup':'dialog'}" @click="onClick">
    Open Flyout
  </PButton>

  <PFlyout :open="open" aria="{'aria-label':'Some Heading'}" @dismiss="onDismiss">
    <PHeading slot="header" size="large" tag="h2">
      Some Heading
    </PHeading>
    <PText>
      Some Content Begin
    </PText>
    <div :style="{"width":"10px","height":"120vh","background":"deeppink"}" />
    <PText>
      Some Content End
    </PText>
    <PButtonGroup slot="footer">
      <PButton type="button">
        Proceed
      </PButton>
      <PButton type="button" variant="secondary">
        Cancel
      </PButton>
    </PButtonGroup>
    <PText slot="sub-footer">
      Some additional Sub-Footer
    </PText>
  </PFlyout>
</template>"
`;
